test/error/NumberStatement.mod
MODULE NumberStatement;

  PROCEDURE Go*;
  BEGIN
    1
  END Go;

END NumberStatement.
